--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <section id="about">
     <h2>About Me</h2>
-    <p>I am Nkweatu Kennedy, a software developer and also the CEO of NKC.Tech.
+    <p>I am Nkweatu Kennedy, a software developer/engineer 
     <br> I build Mobile Apps, Desktop Apps and Web apps.
         <br>I am passionate about programming which gives me the
         opportunity to bring my clients dream to life.
