--- a/index.html
+++ b/index.html
@@ -54,5 +54,13 @@
 <section>
 <p> You can send a mail directly to nkweatukennedy@gmail.com</p>
 </section>
+    <section>
+        <h2 style="color: blue;">My Links</h2>
+    <ul>
+        <li><a href="https://github.com/NKWEATU" target="_blank">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/kennedy-nkweatu-8b3127324/">LinkedIn</a></li>
+        <li><a href="https://www.youtube.com/@KENNEDYNKWEATU">Youtube</a></li>
+    </ul>
+    </section>
 </body>
 </html>
