--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 <p> You can send a mail directly to nkweatukennedy@gmail.com</p>
 </section>
     <section>
-        <h2 style="color: blue;">Links</h2>
+       <h2 style="color: blue; text-align: center;">Links</h2>
     <ul>
         <li><a href="https://github.com/NKWEATU" target="_blank">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/kennedy-nkweatu-8b3127324/">LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/kennedy-nkweatu">LinkedIn</a></li>
         <li><a href="https://www.youtube.com/@KENNEDYNKWEATU">Youtube</a></li>
     </ul>
     </section>
