--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
 </section>
     <section>
        <h2 style="color: blue; text-align: center;">Links</h2>
-    <ul>
+   <div style="text-align: center;">
+    <ul style="list-style: none; padding: 0;">
         <li><a href="https://github.com/NKWEATU" target="_blank">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/kennedy-nkweatu">LinkedIn</a></li>
         <li><a href="https://www.youtube.com/@KENNEDYNKWEATU">Youtube</a></li>
     </ul>
+</div>
     </section>
 </body>
 </html>
