--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 <section id="hero">
     <h2>Welcome to My Portfolio</h2>
-    <p>I'm a software developer passionate about building great applications.</p>
+    <p>I'm a Software & Machine learning Engineer, passionate about building great AI applications.</p>
 </section>
 
 <section id="about">
     <h2>About Me</h2>
     <p>I am Nkweatu Kennedy, a Software/Machine learning Engineer 
-    <br> I build Mobile Apps, Desktop Apps and Web apps.
+    <br> I build Mobile Apps, Desktop Apps and Web apps while integrating the concept of artificial intelligence.
         <br>I am passionate about programming which gives me the
         opportunity to bring my clients dream to life.
     </p>
