--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <li><a href="https://github.com/NKWEATU" target="_blank">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/kennedy-nkweatu" target="_blank">LinkedIn</a></li>
         <li><a href="https://www.youtube.com/@KENNEDYNKWEATU" target="_blank">YouTube</a></li>
+        <li> You can place a call on 07025852772  for any projects or online coding lessons with integrating it with Artificial Intelligence (AI)</li>
     </ul>
 </section>
 
