--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <div class="project-card">Mobile Banking UI</div>
         <div class="project-card">Credit Scoring ML Model</div>
     </div>
+    <p>Check out the live demo of my projects on my linkedIn page by clicking the link below</p>
 </section>
 
 <!-- CONTACT SECTION -->
