--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 <section id="about">
     <h2>About Me</h2>
     <p>
-        I am Nkweatu Kennedy, a Software/Machine Learning Engineer.
+        I am Nkweatu Kennedy, a Software/Machine Learning Engineer currently working with NIIT Abuja and the founder of NKC-TECH.
         I build Mobile Apps, Desktop Apps, and Web Apps while integrating the power of Artificial Intelligence.
         I am passionate about programming, and I enjoy bringing my clients' dreams to life through innovation and technology.
+    
     </p>
 </section>
 
